[package]
name = "krun-nitro-eif-ctl"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/tylerfanelli/krun-nitro-eif-ctl"
authors = ["Tyler Fanelli <tfanelli@redhat.com>"]
description = "krun-nitro EIF configuration tool"

[dependencies]
anyhow = "1.0"
aws-nitro-enclaves-image-format = "0.6.0"
chrono = "0.4.43"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10"
tempfile = "3.24.0"
