[package]
name = "krun-awsnitro-eif-ctl"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/tylerfanelli/krun-awsnitro-eif-ctl"
authors = ["Tyler Fanelli <tfanelli@redhat.com>"]
description = "krun-awsnitro EIF configuration tool"

[dependencies]
anyhow = "1.0"
aws-nitro-enclaves-image-format = "0.3.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cpio = "0.4.1"
serde_json = "1.0"
sha2 = "0.9.5"
